--- a/.github/workflows/readfile.yml
+++ b/.github/workflows/readfile.yml
@@ -14,7 +14,7 @@ jobs:
         id: read_file
         uses: andstor/file-reader-action@v1
         with:
-          path: "package.json"
+          path: "myFile.json"
 
       - name: File contents
         run: echo "${ steps.read_file.outputs.contents }"
